# j4rs-java-call-rust

./: LICENSE  README.md
java/: pom.xml
java/src/main/java/io/github/astonbitecode/j4rs/example/: Main.java  MyClass.java  RustFunctionCalls.java  RustSimpleFunctionCall.java  Stress.java
java/src/main/java/io/github/astonbitecode/j4rs/example/json/: MyClassJsonCodec.java
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
