[package]
name = "rustlib"
version = "0.1.0"
authors = ["Aston <astonbitecode@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = { path = "../../j4rs/rust" }
j4rs_derive = { path = "../../j4rs/rust/j4rs_derive" }